kanc/src/tests/sample_code/should_fail/single_file/bind/duplicate_variant_params.k
type U {
    .f(R: Type, R: Type): U,
}
